--- a/package.json
+++ b/package.json
@@ -12,16 +12,23 @@
   "dependencies": {
     "@astrojs/check": "^0.4.1",
     "@astrojs/mdx": "^2.0.4",
+    "@astrojs/react": "^3.1.0",
     "@astrojs/rss": "^4.0.2",
     "@astrojs/sitemap": "^3.0.4",
     "@astrojs/tailwind": "^5.1.0",
     "@fontsource-variable/rubik": "^5.0.20",
+    "@tanstack/react-table": "^8.15.3",
+    "@types/react-dom": "^18.2.23",
     "astro": "^4.1.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sharp": "^0.33.2",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "yahoo-finance2": "^2.11.0"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.10"
+    "@tailwindcss/typography": "^0.5.10",
+    "@types/react": "^18.2.73"
   }
 }
