--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,18 @@
 {
   "extends": "astro/tsconfigs/strict",
   "compilerOptions": {
+    "jsx": "react-jsx",
     "strictNullChecks": true,
+    "module": "ESNext",
+    "baseUrl": "/Users/zatan/github/blog/src",
+    "paths": {
+      "@utils/*": [
+        "utils/*"
+      ]
+    },
+    "jsxImportSource": "react"
+  },
+  "ts-node": {
+    "esm": true
   }
 }
