--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
-    "@types/react": "^18.2.73"
+    "@types/react": "^18.2.73",
+    "twelvedata": "^3.0.1"
   }
 }
