--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "@fontsource-variable/rubik": "^5.0.20",
     "@tanstack/react-table": "^8.15.3",
     "@types/react-dom": "^18.2.23",
+    "@types/recharts": "^1.8.29",
     "astro": "^4.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-charts": "^4.0.1",
     "sharp": "^0.33.2",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3",
-    "yahoo-finance2": "^2.11.0"
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
