--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "jsx": "react-jsx",
     "strictNullChecks": true,
-    "module": "ESNext",
+    "module": "ES2022",
     "jsxImportSource": "react"
   },
   "ts-node": {
